agregar ajustes a robot